packages/coln-compiler/test/golden/weighted.output
-- elaborated


-- messages

warning[W0101]: Defaulted precedence of ~> to the same as +
3 |   E : V -> V -> Int ~> Set
3 |                     ^^

error[E0200]: unexpected notation for expression: Infix
3 |   E : V -> V -> Int ~> Set
3 |                 ^^^^^^^^^^

error[E0314]: no such variable WeightedGraph in scope
6 | theory Q (G : WeightedGraph) := sig
6 |               ^^^^^^^^^^^^^
